--- a/ENB329ControlApp/app/src/main/AndroidManifest.xml
+++ b/ENB329ControlApp/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.qut.alex.enb329_control_app">
-
+    <uses-permission android:name="android.permission.CAMERA"/> <!-- Camera Permission Stuff -->
+    <uses-feature android:name="android.hardware.camera" android:required="false"/>
+    <uses-feature android:name="android.hardware.camera.autofocus" android:required="false"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
